--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: pure_ui_kit
-description: "A new Flutter package project."
+description: "A Flutter UI kit inspired by Tailwind CSS, providing elegant and customizable components. Currently includes Empty State components with more components coming soon."
 version: 0.0.1
-homepage:
+homepage: https://github.com/Rileyjrjohns/pure_ui_kit
 
 environment:
   sdk: ^3.5.4
