docs: add dartdoc comments to public API
- Add library-level documentation to pure_ui_kit.dart
- Document PureEmptyState class and its constructors
- Document all public properties of PureEmptyState

Improves code readability and pub.dev score by adding
comprehensive API documentation.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: pure_ui_kit
 description: "A Flutter UI kit inspired by Tailwind CSS, providing elegant and customizable components. Currently includes Empty State components with more components coming soon."
-version: 0.0.1
+version: 0.0.2
 homepage: https://github.com/Rileyjrjohns/pure_ui_kit
+repository: https://github.com/Rileyjrjohns/pure_ui_kit
 
 environment:
   sdk: ^3.5.4
